@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/NewStuff,v 1.152 2007/06/22 14:38:58 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/NewStuff,v 1.153 2007/06/26 09:23:34 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -77,6 +77,10 @@ Version 4.68
  6. The variable $max_received_linelength contains the number of bytes in the
     longest line that was received as part of the message, not counting the
     line termination character(s).
+
+ 7. Host lists can now include +ignore_defer and +include_defer, analagous to
+    +ignore_unknown and +include_unknown. These options should be used with
+    care, probably only in non-critical host lists such as whitelists.
 
 
 Version 4.67
