@@ -1,4 +1,4 @@
-# +include_unknown and +ignore_unknown
+# +include_unknown, +ignore_unknown, +include_defer, +ignore_defer
 exim -bh V4NET.0.0.1
 mail from:<x@y>
 rcpt to:<x@test.ex>
@@ -22,5 +22,20 @@ quit
 exim -bh V4NET.0.0.13 -DLOG_SELECTOR=log_selector=+unknown_in_list
 MAIL FROM:<userx@test.ex>
 rcpt to:<y@test.ex>
+quit
+****
+exim -bh V4NET.0.0.13
+MAIL FROM:<userx>
+rcpt to:<a@test.ex>
+quit
+****
+exim -bh V4NET.0.0.13
+MAIL FROM:<userx@test.ex>
+rcpt to:<b@test.ex>
+quit
+****
+exim -bh V4NET.0.0.13
+MAIL FROM:<userx@test.ex>
+rcpt to:<c@test.ex>
 quit
 ****
