@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.517 2007/06/22 14:38:58 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.518 2007/06/26 09:23:34 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -68,6 +68,8 @@ PH/09 Tidied the code for creating ratelimiting keys, creating them explicitly
 PH/10 Added the /noupdate option to the ratelimit ACL condition.
 
 PH/11 Added $max_received_linelength.
+
+PH/12 Added +ignore_defer and +include_defer to host lists.
 
 
 Exim version 4.67
